   * BUFR (edition 3) mostly works
  geoloc
   * Add RotatedPole projection
  ft
   * Point Feature Types completely reworked, based on StructureData iterators
  NcML
   * Tiled aggregation
   * Existing accepts timeUnitsChange
   * Union accepts scan
   * Global attributes can be promoted to Variables.

 Libraries
  * JDOM 1.1
  * use new visad library 12/04/07

 Release Details:
    18: fix large file writing.
        in agg, fix CacheVar, joinExisting persistance.
        move NetcdfDataset.makeArray to Array.makeArray, add new variant
        UnidataPointObsDataset does not require bounding box in global attributes
        NetcdfFileWriteable will allow object names to start with a digit
        ToolsUI : allow setting file caching
        add NcdumpW.printArray for vanilla array printing
        CoordSysBuilder allows coordinate axes to have coordinate systems
        move McIDASAreaProjection, McIDASAreaTransformBuilder to ucar.nc2.iosp.mcidas
    17: HTTPRandomAccessFile allows content-length to be long
        fix NcML aggregation unit tests; add new ones
        integrate aggregation with FileCache, experimental concurrency
        fix bug with relative URLs with blanks in them (URLnaming)
        finish new agg features : promoteGlobalAttribute, timeUnitsChange
    16: remove direct use of ucar.units, except from ucar.nc2.units
        rewrite NetcdfFileCache, remove NetcdfDatasetCache
        EnhanceScaleMissingImpl uses Misc.closeEnough for missing value comparisions.
        default VariableDS.useNaNs = true
        ucar.nc2.util.cache.FileCache uses FileCacheable, FileFactory interfaces;
            implement NetcdfFileCache, HTTP file cache with FileCache.
        start adding net.jcip.annotations to document thread safetyAgg
        convertScaleOffsetMissing() methods back into VariableEnhanced
        clean up Aggregation, make sure docs are correct
        clean up NetcdfDataset.EnhanceMode, add deferred option