@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <netcdf xmlns="http://www.unidata.ucar.edu/namespaces/netcdf/ncml-2.2">
   <aggregation dimName="time" type="joinExisting" recheckEvery="4 sec">
-    <scan dateFormatMark="CG#yyyyDDD_HHmmss" location="src/test/data/ncml/nc/cg/" suffix=".nc" subdirs="false" />
+    <scan dateFormatMark="CG#yyyyDDD_HHmmss" location="nc/cg/" suffix=".nc" subdirs="false" />
   </aggregation>
 </netcdf>
