@@ -22,7 +22,7 @@
       <documentation>HEY</documentation>
 
       <dataset name="CO2" urlPath="flux/CO2.nc" ID="nest11"/>
-      <dataset name="NO2" urlPath="flux/NO2.nc" ID="nest12" dataType="Imagine" serviceName="local" authority="human">
+      <dataset name="NO2" urlPath="flux/NO2.nc" ID="nest12" dataType="Image" serviceName="local" authority="human">
         <property name="GoodThing" value="override"/>
         <dataset name="CO22" urlPath="flux/CO22.nc" ID="nest121"/>
       </dataset>
